# submissions-api/swagger_server/model/submissions_specimen.py
@@ -4,4 +4,4 @@ from .base import Base, db
 class SubmissionsSpecimen(Base):
     __tablename__ = "specimen"
     specimen_id = db.Column(db.String(), primary_key=True)
-    biosample_id = db.Column(db.String(), nullable=False)
+    biosample_accession = db.Column(db.String(), nullable=False)
